# dtcwt-nn

./: .gitignore  README.md  add_labels.py  brest_wavelet.py  common_data.py  features.ipynb  features.py  main.ipynb  main.py  maxim.py  maxim.spec  mpl_styles.py  other_plots.ipynb  plots3d.py  pyproject.toml  pywt.ipynb
__presentation__/: model2.h5
config/: settings.json
data/Dataset0/: Readme.md
data/DatasetAudio/: README.md
data/DatasetGitHub/: README.md
data/DatasetOpen/: README.md
data/recorded/m4a/: 6_1500_10.m4a  6_1500_10_2.m4a  6_1500_20.m4a  6_1500_20_2.m4a  6_500_10.m4a  6_500_10_2.m4a  6_500_20.m4a  6_500_20_2.m4a
datasets/: dataset_rec.py  dataset_v.py
helpers/: __init__.py  ipynb.py  keras.py  model_results.py  serialization.py
helpers/pyqt/: __init__.py  translate.py
locales/: en.qm  en.ts
pyqt_framework/: compat.py  model.py  storage.py
pyqt_framework/widgets/: list_text_editor.py  model_editor.py  path.py  simple.py
resources/: feature_extractor.ui  project.ui  recorder.ui  splitter.ui
tests/: test_fourier.py  test_gui_settings.py  test_serialization.py  test_storage.py
widgets/: adam.py  class_probabilities.py  classnames_editor.py  display.py  dtcwt.py  feature.py  feature_extractor.py  fitter.py  fourier.py  gui_settings.py  log_spin.py  main_gui.py  model_info.py  runner.py  saving_settings.py  settings.py  train_test_splitter.py
